<resources>
    <string name="app_name">Dialogs_AsyncTask</string>
    <string name="abrir_alert_dialog">Abrir Alert dialog</string>
    <string name="dialog_title">Prueba de dialogo</string>
    <string name="dialog_message">Estas seguro que esto es un mensaje</string>
    <string name="dialog_button_positive">Ok Positivo</string>
    <string name="dialog_button_negative">Ok Negativo</string>
    <string name="dialog_button_neutral">Neutral</string>
    <string name="abrir_alert_dialog_list">Abrir alert dialog List</string>
    <string name="toast_message">La ciudad seleccionada es %s</string>
    <string name="dialog_multi_choice">dialog multi choice</string>
    <string name="dialog_single_choice">dialog single choice</string>
    <string name="password">Passsword</string>
    <string name="userName">UserName</string>
    <string name="custom_dialog">Custom Dialog</string>
    <string name="time_picker_dialog">Time picker dialog</string>
    <string name="date_picker_dialog">Date picker Dialog</string>
</resources>